# GameBloc-Chess-Game-

./: Cargo.toml  README.md  build.sh  declaration.d.ts  deploy.sh  dfx.json  documentation.md  mops.toml  package-lock.json  package.json  tsconfig.json  vite.config.js
src/chess_gamebloc_backend/: Cargo.toml  chess.did  chess_gamebloc_backend.did  ws_types.did
src/chess_gamebloc_backend/src/: conversion.rs  evm_signer.rs  fees.rs  getrandom_fail.rs  handler.rs  handlers.rs  lib.rs
src/chess_gamebloc_backend/src/jobs/: distribution.rs
src/chess_gamebloc_frontend/: index.html  package.json  server.js  tailwind.config.js  tsconfig.json  vite.config.cjs
src/chess_gamebloc_frontend/chessEngine/engineChess/: package.json
src/chess_gamebloc_frontend/chessEngine/engineChess/src/: App.tsx  index.tsx
src/chess_gamebloc_frontend/chessEngine/engineChess/src/Chessengine/: Chessengine.tsx
src/chess_gamebloc_frontend/public/: .ic-assets.json5
src/chess_gamebloc_frontend/src/: App.jsx  App.tsx  AppChessEngine.tsx  AppWrap.tsx  ChessPage.tsx  CurvedText.jsx  Game.jsx  Game.tsx  Games.tsx  HeaderInfo.jsx  LandingPage.tsx  Login.jsx  PopupInfo.jsx  UserInputForm.tsx  UserInputWrap.tsx  WalleConnect.tsx  Ws.js  Ws.mjs  curve.css  main.jsx  popupInfo.css
src/chess_gamebloc_frontend/src/Chessengine/: useChessengine.tsx
src/chess_gamebloc_frontend/src/GameFolder/Chessboard/: PieceCell.tsx  usePrintHelper.tsx
src/chess_gamebloc_frontend/src/Utils/: icUrl.ts
src/chess_gamebloc_frontend/src/auth/: use_auth_client.tsx
src/chess_gamebloc_frontend/src/components/: Cursor.jsx  Cursor.tsx  CustomDialog.jsx  CustomDialog.tsx  Home.jsx  Login.jsx  WsTesting.jsx
src/chess_gamebloc_frontend/src/components/Noti/: GameError.tsx
src/chess_gamebloc_frontend/src/components/hooks/: useCursor.jsx
src/chess_gamebloc_frontend/src/components/stuntPull/: InitGame.jsx  MainGame.jsx  socket.js
src/chess_gamebloc_frontend/src/functions/: chessHooks.tsx  context.ts  functions.ts
src/chess_gamebloc_frontend/src/lib/: ControlUtils.jsx  ReactCurvedText.jsx
src/chess_gamebloc_frontend/src/redux/slice/: authClient.ts
src/chess_gamebloc_frontend/src/utils/: ws.ts
src/chess_kitchen/: main.mo
src/foundry/: nft.sol
src/script/: NFT.s.sol  script.s.sol
