[workspace]
members = [
    "src/chess_gamebloc_backend"
]
resolver = "2"

[workspace.dependencies]
ethers-core = "2.0.14"
serde_bytes = "0.11.14"
serde_json = "1.0.116"
ic-evm-utils = "4.0.0"
evm-rpc-canister-types = "4.0.1"
serde = { version = "1.0.193", features = []}
candid = "0.10.9"
ic-cdk = "0.12.2"


[profile.release]
lto = true
opt-level = 'z'
panic = 'abort'


