[package]
name = "chess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]


[dependencies]
candid = "0.10.9"
ic-cdk = "0.16.0"
serde = { version = "1.0.193", features = []}
lazy_static = "1.4.0"
# from the ic-cdk for chess

getrandom = { version = "0.2", features = [
    "custom",
] } # tanton requires this to compile on wasm target

tanton = "1.0.0"
ic-websocket-cdk = "0.4.1"

# from the ic-cdk for chess
