[package]
name = "chess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]


[dependencies]
candid.workspace = true
serde.workspace = true
# ic-cdk = "0.17.0"
lazy_static = "1.4.0"
hex = "0.4.3"
sha2 = "0.10.6"
k256 = { version = "0.12.0", features = ["ecdsa"] }
# from the ic-cdk for chess

# getrandom  = "0.3.0" # tanton requires this to compile on wasm target

getrandom = { version = "0.2.0", features = ["custom"] }

tanton = "1.0.0"
ic-cdk.workspace = true
ic-websocket-cdk = "0.4.1"
ethers-core.workspace = true
num-traits = "0.2.19"
serde_bytes.workspace = true
serde_json.workspace = true
# evm-rpc-canister-types.workspace = true
evm-rpc-canister-types = "4.0.1"
# ic-websocket-cdk = "0.4.1"

# from the ic-cdk for chess
 