[package]
name = "chess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]


[dependencies]
serde.workspace = true
candid = {workspace = true}
lazy_static = "1.4.0"
hex = "0.4.3"
sha2 = "0.10.6"
k256 = { version = "0.13.0", features = ["ecdsa"] }
# from the ic-cdk for chess

# getrandom  = "0.3.0" # tanton requires this to compile on wasm target

getrandom = { version = "0.2", features = ["js"] }

tanton = "1.0.0"
ic-cdk.workspace = true
ic-websocket-cdk = "0.4.1"
ethers-core.workspace = true
num-traits = "0.2.19"
serde_bytes.workspace = true
serde_json.workspace = true
# evm-rpc-canister-types.workspace = true
evm-rpc-canister-types = "4.0.1"
# ic-websocket-cdk = "0.4.1"

# cronos starter followup
ic-canisters-http-types = { git="https://github.com/dfinity/ic"}
ic-cdk-timers = "0.7" # Feel free to remove this dependency if you don't need timers
ic-stable-structures = "0.6.4"
minicbor = { version = "0.24.0", features = ["alloc", "derive"] }
minicbor-derive = "0.15.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
resvg = "0.41.0"
svg = "0.17.0"
 